--- a/notebooks/Linear_Regression_OLS.ipynb
+++ b/notebooks/Linear_Regression_OLS.ipynb
@@ -771,6 +771,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4d398f83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U shape: (16512, 16512)\n",
+      "s shape: (9,)\n",
+      "Vt shape: (9, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy.linalg import svd\n",
+    "\n",
+    "U, s, Vt = svd(X_b)\n",
+    "print(\"U shape:\", U.shape)\n",
+    "print(\"s shape:\", s.shape) \n",
+    "print(\"Vt shape:\", Vt.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2729deaf",
    "metadata": {},
