--- a/notebooks/Linear_Regression_OLS.ipynb
+++ b/notebooks/Linear_Regression_OLS.ipynb
@@ -834,9 +834,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f87670ba",
+   "metadata": {},
+   "source": [
+    "# Animation\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "54b7c812",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04307241",
    "metadata": {},
    "outputs": [],
    "source": []
