--- a/notebooks/Linear_Regression.ipynb
+++ b/notebooks/Linear_Regression.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5f3a1074",
    "metadata": {},
    "outputs": [],
@@ -44,10 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f603a8c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sklearn MSE: 0.5558915986952442\n",
+      "Sklearn R2: 0.575787706032451\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "96b020dc",
    "metadata": {},
    "outputs": [],
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "413820e6",
    "metadata": {},
    "outputs": [],
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bce5f4af",
    "metadata": {},
    "outputs": [],
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "14d69268",
    "metadata": {},
    "outputs": [],
@@ -129,10 +138,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d38e7af6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss: 5.6297\n",
+      "Epoch 100, Loss: 0.7104\n",
+      "Epoch 200, Loss: 0.5953\n",
+      "Epoch 300, Loss: 0.5732\n",
+      "Epoch 400, Loss: 0.5584\n",
+      "Epoch 500, Loss: 0.5477\n",
+      "Epoch 600, Loss: 0.5398\n",
+      "Epoch 700, Loss: 0.5341\n",
+      "Epoch 800, Loss: 0.5299\n",
+      "Epoch 900, Loss: 0.5269\n",
+      "Custom Model MSE: 0.5545795065308549\n",
+      "Custom Model R2: 0.5767889905063643\n"
+     ]
+    }
+   ],
    "source": [
     "# Train from scratch\n",
     "weights, bias = train(X_train_scaled, y_train)\n",
@@ -148,7 +176,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
