--- a/notebooks/Linear_Regression.ipynb
+++ b/notebooks/Linear_Regression.ipynb
@@ -5,7 +5,7 @@
    "id": "4aa18835",
    "metadata": {},
    "source": [
-    "# Linear Regression from Scratch — With Gradient Descent 🧠📉\n",
+    "# Linear Regression from Scratch — With Gradient Descent \n",
     "\n",
     "This notebook walks you through implementing linear regression from scratch using gradient descent.\n",
     "We'll start by understanding the key concepts, move to code each part step-by-step, and finally evaluate our model!\n",
