--- a/notebooks/Linear_Regression_OLS.ipynb
+++ b/notebooks/Linear_Regression_OLS.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## ⚠️ What if \\( X^TX \\) is Not Invertible?\n",
+    "##  What if \\( X^TX \\) is Not Invertible?\n",
     "\n",
     "If \\( X^TX \\) is **singular** or **ill-conditioned** (e.g., due to multicollinearity), we cannot compute its inverse directly.\n",
     "\n",
@@ -60,7 +60,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## ✅ Comparing Manual OLS and scikit-learn\n",
+    "##  Comparing Manual OLS and scikit-learn\n",
     "\n",
     "We compute predictions manually using:\n",
     "\n",
