--- a/notebooks/Ridge_Lasso_Regression.ipynb
+++ b/notebooks/Ridge_Lasso_Regression.ipynb
@@ -74,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📊 Model Comparison Results:\n",
+      " Model Comparison Results:\n",
       "\n",
       "Linear Regression (Closed-form)     | MSE: 0.5559 | R²: 0.5758\n",
       "SGDRegressor (Linear GD)            | MSE: 0.5506 | R²: 0.5798\n",
@@ -128,7 +128,7 @@
     "    print(f\"{name:<35} | MSE: {mse:.4f} | R²: {r2:.4f}\")\n",
     "\n",
     "# Compare models\n",
-    "print(\"📊 Model Comparison Results:\\n\")\n",
+    "print(\" Model Comparison Results:\\n\")\n",
     "evaluate_model(\"Linear Regression (Closed-form)\", y_test, lr_preds)\n",
     "evaluate_model(\"SGDRegressor (Linear GD)\", y_test, sgd_preds)\n",
     "evaluate_model(\"Ridge Regression\", y_test, ridge_preds)\n",
@@ -208,7 +208,7 @@
     "\n",
     "---\n",
     "\n",
-    "### ✅ Gradient Descent Update Rule\n",
+    "###  Gradient Descent Update Rule\n",
     "\n",
     "Since the loss function is differentiable, we can apply standard gradient descent. The gradient of the Ridge loss with respect to the weights is:\n",
     "\n",
@@ -228,7 +228,7 @@
     "\n",
     "---\n",
     "\n",
-    "### 💡 Key Properties of Ridge Regression\n",
+    "###  Key Properties of Ridge Regression\n",
     "\n",
     "- Encourages **small but non-zero** weights (unlike Lasso, which can set them to zero)\n",
     "- Useful when you have **multicollinearity** or **high-dimensional data**\n",
@@ -236,7 +236,7 @@
     "\n",
     "---\n",
     "\n",
-    "### 🛠️ Why Use Ridge Regression?\n",
+    "###  Why Use Ridge Regression?\n",
     "\n",
     "- Reduces model complexity and variance\n",
     "- Helps prevent overfitting\n",
@@ -253,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📉 Ridge Regression (Gradient Descent):\n",
+      " Ridge Regression (Gradient Descent):\n",
       "MSE: 0.5559\n",
       "R² Score: 0.5758\n"
      ]
@@ -310,7 +310,7 @@
     "mse = mean_squared_error(y_test, preds)\n",
     "r2 = r2_score(y_test, preds)\n",
     "\n",
-    "print(\"📉 Ridge Regression (Gradient Descent):\")\n",
+    "print(\" Ridge Regression (Gradient Descent):\")\n",
     "print(f\"MSE: {mse:.4f}\")\n",
     "print(f\"R² Score: {r2:.4f}\")\n"
    ]
@@ -325,7 +325,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🛠 Lasso Regression (From Scratch):\n",
+      " Lasso Regression (From Scratch):\n",
       "MSE: 0.5559\n",
       "R² Score: 0.5758\n"
      ]
@@ -397,7 +397,7 @@
     "mse = mean_squared_error(y_test, y_pred)\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "print(\"🛠 Lasso Regression (From Scratch):\")\n",
+    "print(\" Lasso Regression (From Scratch):\")\n",
     "print(f\"MSE: {mse:.4f}\")\n",
     "print(f\"R² Score: {r2:.4f}\")\n"
    ]
@@ -449,7 +449,7 @@
     "\n",
     "---\n",
     "\n",
-    "### 💡 Summary\n",
+    "###  Summary\n",
     "\n",
     "- Lasso Regression adds L1 penalty which **encourages sparsity** in weights.\n",
     "- The **absolute value** function requires using **subgradients** instead of standard gradients.\n",
@@ -467,7 +467,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📉 Lasso Regression (Gradient Descent):\n",
+      " Lasso Regression (Gradient Descent):\n",
       "MSE: 0.6795\n",
       "R² Score: 0.4815\n"
      ]
@@ -527,7 +527,7 @@
     "mse = mean_squared_error(y_test, preds)\n",
     "r2 = r2_score(y_test, preds)\n",
     "\n",
-    "print(\"📉 Lasso Regression (Gradient Descent):\")\n",
+    "print(\" Lasso Regression (Gradient Descent):\")\n",
     "print(f\"MSE: {mse:.4f}\")\n",
     "print(f\"R² Score: {r2:.4f}\")\n"
    ]
